docker-compose/templates/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/animeimagesproject-default: "true"
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
          image: anime-images-backend
          imagePullPolicy: Never
          name: backend
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
