docker-compose/templates/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: front
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: front
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/animeimagesproject-default: "true"
        io.kompose.service: front
    spec:
      hostname: anime-images
      containers:
        - image: anime-images-react
          imagePullPolicy: Never
          name: front-react
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
